make Dareboost happier

--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -39,7 +39,7 @@
 
         <section class="step-feature">
             <div class="step-feature-image">
-                <img src="{{ asset('images/step-slack.png') }}">
+                <img src="{{ asset('images/step-slack.png') }}" alt="Connect to Your Application">
             </div>
             <div class="step-feature-text">
                 <h3>1. Connect to Your Application</h3>
@@ -49,7 +49,7 @@
 
         <section class="step-feature reverse">
             <div class="step-feature-image">
-                <img src="{{ asset('images/step-users.png') }}">
+                <img src="{{ asset('images/step-users.png') }}" alt="Select Users" >
             </div>
             <div class="step-feature-text">
                 <h3>2. Select Users</h3>
@@ -59,7 +59,7 @@
 
         <section class="step-feature">
             <div class="step-feature-image">
-                <img src="{{ asset('images/step-inform.png') }}">
+                <img src="{{ asset('images/step-inform.png') }}" alt="Inform Users">
             </div>
             <div class="step-feature-text">
                 <h3>3. Inform Users</h3>
@@ -69,7 +69,7 @@
 
         <section class="step-feature reverse">
             <div class="step-feature-image">
-                <img src="{{ asset('images/step-buy.png') }}">
+                <img src="{{ asset('images/step-buy.png') }}" alt="Buy a Gift">
             </div>
             <div class="step-feature-text">
                 <h3>4. Buy a Gift</h3>
