--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:og="http://ogp.me/ns#">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
@@ -42,7 +41,7 @@
                         <a class="pure-menu-link" href="{{ path('hall_of_fame') }}"><i class="fas fa-star"></i> Hall of Fame</a>
                     </li>
                     <li class="pure-menu-item">
-                        <a target="_blank" class="pure-menu-link" href="https://github.com/jolicode/secret-santa/"><i class="fab fa-github"></i> Fork me on GitHub</a>
+                        <a target="_blank" rel="noreferrer" class="pure-menu-link" href="https://github.com/jolicode/secret-santa/"><i class="fab fa-github"></i> Fork me on GitHub</a>
                     </li>
                 </ul>
             </div>
