--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -62,6 +62,11 @@
                     &mdash;
                     Emoji and logo provided by <a href="https://www.emojione.com/">Emoji One</a>
                 </p>
+                <p>
+                    <a href="{{ path('terms') }}">Terms of Service</a>
+                    and
+                    <a href="{{ path('privacy_policy') }}">Privacy Policy</a>
+                </p>
             </footer>
         </div>
     </body>
