--- a/templates/santa/finish.html.twig
+++ b/templates/santa/finish.html.twig
@@ -46,7 +46,7 @@
                     {% endfor %}
                 </ul>
 
-                <script type="text/javascript">
+                <script type="text/javascript" nonce="{{ csp_nonce() }}">
                     var revealButton = document.getElementById('reveal');
 
 
@@ -72,7 +72,7 @@
                     </a>
                 </div>
 
-                <script type="text/javascript">
+                <script type="text/javascript" nonce="{{ csp_nonce() }}">
                     var secretSantaRetried = false;
 
                     var retryButton = document.getElementById('retry-button');
