--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -78,7 +78,7 @@
 
             </form>
 
-            <script type="text/javascript" nonce="{{ csp_nonce() }}">
+            <script type="text/javascript" nonce="{{ csp_nonce('script') }}">
                 /**
                  * I did know this is a global and I feel bad.
                  * Next time I will install 10mb of npm and react javascript to switch a flag :)
