--- a/templates/content/stats.html.twig
+++ b/templates/content/stats.html.twig
@@ -9,9 +9,9 @@
     <div class="container-charts">
         <h3 class="graph-title">Number of Secret Santa per month</h3>
         <div class="chart chart-month">
-            {% if statisticValues.hashesMonth is not empty %}
-            {% set values = statisticValues.hashesMonth %}
-                {% for value, key in statisticValues.hashesMonth %}
+            {% if statisticsCounter.hashesMonth %}
+                {% set values = statisticsCounter.hashesMonth %}
+                {% for value, key in values %}
                     <div  class="graph-column" style="width: {{ (1 / values|length) * 750 }}px;padding: 0 10px;">
                         <div class="graph-counterValue">{{ key }}</div>
                         <div class="graph-bar" style="width: {{ (1 / values|length) * 750 }}px; height: {{ (key / max(values)) * 500 }}px;"></div>
@@ -25,8 +25,8 @@
 
         <h3 class="graph-title">Number of Secret Santa per year</h3>
         <div class="chart chart-year">
-            {% if statisticValues.hashesYear is not empty %}
-                {% set values = statisticValues.hashesYear %}
+            {% if statisticsCounter.hashesYear %}
+                {% set values = statisticsCounter.hashesYear %}
                 {% for value, key in values %}
                     {% if value matches '/date:\\d+$/'  %}
                         <div class="graph-column" style="width: {{ (1 / values|length) * 300 }}px;padding: 0 7px;">
@@ -43,8 +43,8 @@
 
         <h3 class="graph-title">Number of Secret Santa since 10/2018</h3>
         <div class="chart chart-total">
-                {% if statisticValues.hashesTotal is not empty %}
-                {% set values = statisticValues.hashesTotal %}
+            {% if statisticsCounter.hashesTotal %}
+                {% set values = statisticsCounter.hashesTotal %}
                 {% for value, key in values %}
                     {% if value matches '/date:total/'  %}
                         <div class="graph-column" style="width: {{ (1 / values|length) * 300 }}px;padding: 0 5px;">
