change variable name, add typehint and make min-height for column under 1px

--- a/public/style.css
+++ b/public/style.css
@@ -930,6 +930,7 @@ textarea {
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
+    min-height: 1px;
 }
 
 .graph-bar:hover {
