--- a/templates/content/stats.html.twig
+++ b/templates/content/stats.html.twig
@@ -1,67 +1,65 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-
-    <div class="jumbotron">
-        <h1>Ho, ho, ho, Here is the statistics of Secret Santa</h1>
-        <p>
-            <small>(Starting 10/2018)</small>
-        </p>
-    </div>
-
-    <div class="container-charts">
-        <h3 class="graph-title">Number of Secret Santa per month</h3>
-        <div class="chart chart-month">
-            {% set stats = statisticsCounter.month %}
-            {% if stats %}
-                {% for dateName, counter in stats %}
-                    <div  class="graph-column" style="width: {{ (1 / stats|length) * 750 }}px;padding: 0 10px;">
-                        <div class="graph-counterValue">{{ counter }}</div>
-                        <div class="graph-bar" style="width: {{ (1 / stats|length) * 750 }}px; height: {{ (counter / max(stats)) * 500 }}px;"></div>
-                        <div class="graph-legend-x">{{ dateName|replace({'date:' : ''}) }}</div>
-                    </div>
-                {% endfor %}
-            {% else  %}
-                <div class="graph-noData">Sorry, there is no statistic for this section 🙈</div>
-            {% endif %}
+    <div class="stats">
+        <div class="jumbotron">
+            <div class="jumbotron-inner">
+                <h1>Secret Santa Statistics</h1>
+                <p>
+                    Ho, ho, ho, here are the statistics of Secret Santa
+                    <small>(since 10/2018)</small>
+                </p>
+            </div>
         </div>
 
-        <h3 class="graph-title">Number of Secret Santa per year</h3>
-        <div class="chart chart-year">
-            {% set stats = statisticsCounter.year %}
-            {% if stats %}
-                {% for dateName, counter in stats %}
-                    <div class="graph-column" style="width: {{ (1 / stats|length) * 300 }}px;padding: 0 7px;">
-                        <div class="graph-counterValue">{{ counter }}</div>
-                        <div class="graph-bar" style="width: {{ (1 / stats|length) * 300 }}px; height: {{ (counter / max(stats)) * 500 }}px;"></div>
-                        <div class="graph-legend-x">{{ dateName |replace({'date:' : ''}) }}</div>
-                    </div>
-                {% endfor %}
-            {% else  %}
-                <div class="graph-noData">Sorry, there is no statistic for this section 🙈</div>
-            {% endif %}
-        </div>
-
-        <h3 class="graph-title">Number of Secret Santa per provider</h3>
-        <div class="chart chart-total">
-            {% set stats = statisticsCounter.total %}
-            {% if stats %}
-                {% for dateName, counter in stats %}
-                    <div class="graph-column" style="width: {{ (1 / stats|length) * 300 }}px;padding: 0 5px;">
-                        <div class="graph-counterValue">{{ counter }}</div>
-                        <div class="graph-bar" style="width: {{ (1 / stats|length) * 300 }}px; height: {{ (counter / max(stats)) * 500 }}px;"></div>
-                        <div class="graph-legend-x">
-                            {% if dateName matches '/date:total$/' %}
-                                {{ dateName |replace({'date:' : ''}) |capitalize }}
-                            {% else %}
-                                {{ dateName |replace({'date:total-' : ''}) |capitalize }}
-                            {% endif %}
+        <div class="container-charts">
+            <h2 class="content-head is-center">Number of Secret Santa per month</h2>
+            <div class="chart chart-month">
+                {% set stats = statisticsCounter.month %}
+                {% if stats %}
+                    {% for dateName, counter in stats %}
+                        <div  class="graph-column">
+                            <div class="graph-counterValue">{{ counter }}</div>
+                            <div class="graph-bar" style="height: {{ (counter / max(stats)) * 300 }}px;"></div>
+                            <div class="graph-legend-x">{{ dateName|replace({'date:' : ''}) }}</div>
                         </div>
-                    </div>
-                {% endfor %}
-            {% else %}
-                <div class="graph-noData">Sorry, there is no statistic for this section 🙈</div>
-            {% endif %}
+                    {% endfor %}
+                {% else  %}
+                    <p>Sorry, there is no statistic for this section yet 🙈</p>
+                {% endif %}
+            </div>
+
+            <h2 class="content-head is-center">Number of Secret Santa per year</h2>
+            <div class="chart chart-year">
+                {% set stats = statisticsCounter.year %}
+                {% if stats %}
+                    {% for dateName, counter in stats %}
+                        <div class="graph-column">
+                            <div class="graph-counterValue">{{ counter }}</div>
+                            <div class="graph-bar" style="height: {{ (counter / max(stats)) * 300 }}px;"></div>
+                            <div class="graph-legend-x">{{ dateName|replace({'date:' : ''}) }}</div>
+                        </div>
+                    {% endfor %}
+                {% else  %}
+                    <p>Sorry, there is no statistic for this section yet 🙈</p>
+                {% endif %}
+            </div>
+
+            <h2 class="content-head is-center">Number of Secret Santa per service</h2>
+            <div class="chart chart-total">
+                {% set stats = statisticsCounter.total %}
+                {% if stats %}
+                    {% for dateName, counter in stats %}
+                        <div class="graph-column">
+                            <div class="graph-counterValue">{{ counter }}</div>
+                            <div class="graph-bar" style="height: {{ (counter / max(stats)) * 300 }}px;"></div>
+                            <div class="graph-legend-x">{{ dateName|replace({'date:' : '', 'date:total-' : ''})|capitalize }}</div>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <p>Sorry, there is no statistic for this section yet 🙈</p>
+                {% endif %}
+            </div>
         </div>
     </div>
 
