--- a/templates/bundles/TwigBundle/Exception/error500.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error500.html.twig
@@ -15,7 +15,7 @@
                 Go back to home page
             </a>
 
-            <a href="mailto:coucou+secretsanta@jolicode.com" class="big-button">
+            <a href="mailto:hello@secret-santa.team" class="big-button">
                 <span class="far fa-life-ring" aria-hidden="true"></span>
                 Contact support
             </a>
