--- a/templates/content/hall_of_fame.html.twig
+++ b/templates/content/hall_of_fame.html.twig
@@ -35,5 +35,5 @@
 {% endblock content %}
 
 {% block contact %}
-    <a href="mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="fas fa-star"></i> Want to be listed? Contact us!</a>
+    <a href="mailto:hello@secret-santa.team" class="support-link"><i class="fas fa-star"></i> Want to be listed? Contact us!</a>
 {% endblock contact %}
