--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -7,7 +7,7 @@
 
             <p>
                 Our application was not able to do what you asked for. That's unfortunate and we hope it didn't break Christmas.
-                Feel free to <a href="mailto:coucou+secretsanta@jolicode.com">contact us</a> if you need assistance!
+                Feel free to <a href="mailto:hello@secret-santa.team">contact us</a> if you need assistance!
             </p>
 
             <p>
@@ -26,7 +26,7 @@
                 Go back to home page
             </a>
 
-            <a href="mailto:coucou+secretsanta@jolicode.com" class="big-button">
+            <a href="mailto:hello@secret-santa.team" class="big-button">
                 <span class="far fa-life-ring" aria-hidden="true"></span>
                 Contact support
             </a>
