--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -53,7 +53,7 @@
 
             <footer class="footer is-center {% block footerClass %}{% endblock %}">
                 {% block contact %}
-                    <a href="mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="far fa-life-ring"></i> Need help? Contact us!</a>
+                    <a href="mailto:hello@secret-santa.team" class="support-link"><i class="far fa-life-ring"></i> Need help? Contact us!</a>
                 {% endblock contact %}
                 <p>
                     Made with ♥ by <a href="https://jolicode.com">JoliCode</a>
