--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -61,6 +61,8 @@
                     Hosted gracefully by the awesome people at <a href="https://www.clever-cloud.com/">Clever Cloud</a>
                     &mdash;
                     Emoji and logo provided by <a href="https://www.emojione.com/">Emoji One</a>
+                    &mdash;
+                    Sharing gifts since 2015
                 </p>
                 <p>
                     <a href="{{ path('terms') }}">Terms of Service</a>
