Add the keywords "App" and "Free" in the SEO data

--- a/templates/_seo.html.twig
+++ b/templates/_seo.html.twig
@@ -1,5 +1,5 @@
-{% set title = title|default('Secret Santa - The Secret Santa bot for your Slack or Discord team') %}
-{% set description = description|default('An application to throw Secret Santa with your team on Slack, Discord, etc.') %}
+{% set title = title|default('Secret Santa App - The Secret Santa bot for your Slack or Discord team') %}
+{% set description = description|default('A free application to throw Secret Santa with your team on Slack and Discord and share gifts during the holidays!') %}
 
 <title>{{ title }}</title>
 <meta name="description" content="{{ description }}">
