Updating wording again

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -56,10 +56,10 @@
                     <a href="mailto:hello@secret-santa.team" class="support-link"><i class="far fa-life-ring"></i> Need help? Contact us!</a>
                 {% endblock contact %}
                 <p>
-                    Made with ♥ by <a href="https://jolicode.com">JoliCode</a>
+                    This free service to share the santa spirit is made with ♥ by <a href="https://jolicode.com">JoliCode</a>
                     &mdash;
                     Hosted gracefully by the awesome people at <a href="https://www.clever-cloud.com/">Clever Cloud</a>
-                    &mdash;
+                    <br>
                     Emoji and logo provided by <a href="https://www.emojione.com/">Emoji One</a>
                     &mdash;
                     Sharing gifts since 2015
