--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -54,7 +54,7 @@
                 </div>
                 <div class="step-feature-text">
                     <h3>2. Select Users</h3>
-                    <p>We show you all the users in your team (excluding the bots, because they don't do nice gifts). Just select the ones which will take part to your secret santa.</p>
+                    <p>We show you all the users in your team (excluding the bots, because they don't do nice gifts). Just select the ones which will take part to your Secret Santa.</p>
                 </div>
             </section>
 
@@ -106,7 +106,7 @@
 
             <p>
                 This time is gone! Because all our collaborators are on Slack, we can just select them from this interface
-                and the application does all the work to shuffle users and to informe them of their peer name.
+                and the application does all the work to shuffle users and to inform them of their peer name.
             </p>
         </div>
 
@@ -116,7 +116,7 @@
                 <p>
                     Secret Santa is about sharing and having a good time! This application does not persist anything on disk,
                     does not use web analytics, does not need any registration, does not send spam, does not collect any kind
-                    of personal information and is integrally <a href="https://github.com/jolicode/secret-santa/">open-source</a>.
+                    of personal information, is totally free to use and is integrally <a href="https://github.com/jolicode/secret-santa/">open-source</a>.
                 </p>
             </div>
         </div>
