--- a/templates/santa/finish.html.twig
+++ b/templates/santa/finish.html.twig
@@ -7,10 +7,10 @@
 
             <p class="summary">
                 You have received a private message explaining how to retrieve the santa repartition. 
-                You should probably don't look at it, to avoid breaking the Secret Santa magic.
+                You should probably not look at it, to avoid breaking the Secret Santa magic.
             </p>
         {% else %}
-            <h2>😱 It takes too much time to send all the messages!</h2>
+            <h2>😱 All the messages are not sent yet, please read carefully</h2>
 
             <div class="result-error">
                 <p>
