--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -114,9 +114,7 @@
             <div class="pure-u-1">
                 <h2 class="content-head">Enjoy gifts, love and privacy</h2>
                 <p>
-                    Secret Santa is about sharing and having a good time! This application does not persist anything on disk,
-                    does not use web analytics, does not need any registration, does not send spam, does not collect any kind
-                    of personal information, is totally free to use and is integrally <a href="https://github.com/jolicode/secret-santa/">open-source</a>.
+                    Secret Santa is about sharing and having a good time! This application does not collect any personal information, does not use web analytics, does not need any registration, does not send spam, is totally free to use and is integrally <a href="https://github.com/jolicode/secret-santa/">open-source</a>.
                 </p>
             </div>
         </div>
