--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -11,8 +11,10 @@
             <div class="jumbotron-inner">
                 <h1>Throw a Secret Santa with<br> your team!</h1>
 
-                <q><strong>Secret Santa</strong> is a Western Christmas tradition in which members of a group or
-                    community are <strong>randomly</strong> assigned a person to whom they anonymously <strong>give a gift</strong>.</q>
+                <p>
+                    <strong>Randomly</strong> assign to each member of your <strong>team</strong> (colleagues, friends or family)
+                    a person to whom they anonymously <strong>give a gift</strong>.
+                </p>
 
                 <div class="actions">
                     <a class="action hvr-buzz" href="{{ path('run', { application: 'slack' }) }}">
@@ -33,6 +35,19 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="content what-block">
+            <h2 class="content-head is-center">What is a Secret Santa?</h2>
+
+            <q><strong>Secret Santa</strong> is a Western Christmas tradition in which members of a group or
+                community are <strong>randomly</strong> assigned a person to whom they anonymously <strong>give a gift</strong>.
+                The identity of the gift giver is a <strong>secret</strong> not to be revealed.</q>
+
+            <p>
+                This tradition is also known as "<strong>Kris Kringle</strong>" in Ireland, "<strong>Wichteln</strong>" or "<strong>Engerl und Bengerl</strong>" in Germany,
+                "<strong>Amigo invisible</strong>" in Spain and "<strong>Cacahuète</strong>" in Belgium.
+            </p>
         </div>
 
         <div class="content how-block">
